# flask-realtime

./: .gitignore  Dockerfile  Dockerfile-nginx  Dockerfile-redis  Pipfile  Readme.md  boot.sh  build_push.sh  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  run_redis.sh  test.py  webexintegration.env  wsgi.py
.github/workflows/: main.yml
app/: __init__.py  create_spaces.py  events.py  flaskthread.py  interactive.py  list_spaces.py  stdoutproxy.py  webexteamsasyncapi.py
app/static/js/: application.js
app/templates/: 404.html  500.html  base.html  index.html
nginx/: fastcgi.conf  mime.types  nginx.conf  proxy.conf
redis/: redis.conf
